<resources>
    <string name="app_name">DressApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register"><u>Register</u></string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account_yet">Don\'t have an account yet?</string>
    <string name="search">Search…</string>
    <string name="apply">Apply</string>
    <string name="item_description">Description…</string>
    <string name="cost">Cost per day</string>
    <string name="or">or</string>
    <string name="guest"><u>Continue as a guest</u></string>
    <string name="place_order">Place your order</string>
    <string name="edit_item">Edit item</string>
    <string name="please_review">Please review your experience</string>
    <string name="add_cloth">New Item</string>
    <string name="add">Add</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="order">Order Now</string>
    <string name="save">Save</string>
    <string name="choose_dates">Choose dates:</string>
    <string name="start_date">Start date</string>
    <string name="place_request">Place Request</string>
    <string name="remove_from_wish_list">Remove</string>
    <string name="end_date">End date</string>
    <string name="orders">Orders</string>
    <string name="no_orders">No orders yet…</string>
    <string name="no_clothes">No clothes yet…</string>
    <string name="no_suggestions">No suggestions yet ): \nTry adding items to your wish list</string>
    <string name="finish_order">Finish order</string>
    <string name="finished">Finished</string>
    <string name="clothes">My Items</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wishList">Wish List</string>
    <string name="smartSuggestions">Free Suggestions</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="myClothes">My Items</string>
    <string name="myProfile">My Profile</string>
    <string name="fullName">Full name</string>
    <string name="address">Address</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="title_activity_wish_list">WishListActivity</string>
    <string name="login">Login</string>
    <string name="radius">Radius (KM)</string>
    <string name="rating">Rating</string>
    <string name="maxPrice">Max price</string>
    <string name="minPrice">Min price</string>
    <string name="minDate">Min date</string>
    <string name="maxDate">Max date</string>
    <string name="outOf">Out of</string>
    <string name="inDispute">In dispute</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit">Edit</string>
    <string name="updateUser">Update user details</string>
    <string name="complete_order_title">Are you sure you want to complete this order?</string>
    <string name="current_money">You currently have </string>
    <string name="not_enough_money">not enough coins</string>
    <string name="noWishList">Go to Home and add your first wish!</string>
    <string name="pleaseReview">Please leave review, at least 1 star</string>
    <string name="openDispute">Open dispute</string>
    <string name="disputeOpened">Your dispute was sent successfully</string>
    <string name="disputeContact">We will contact you as soon as possible</string>
    <string name="disableItem">Close item</string>
    <string name="free">Free!</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- GPSTracker -->
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
</resources>
