<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <data>-->
<!--        <import android:type="android.view.View"/>-->
<!--        <variable android:name="isGuest" android:type="Boolean"/>-->
<!--    </data>-->
    <item
        android:id="@+id/home"
        android:icon="@drawable/baseline_home_black_36dp"
        android:title="@string/home" />
    <item android:id="@+id/myCloth"
        android:icon="@drawable/baseline_checkroom_black_36dp"
        android:title="@string/clothes"/>
    <item android:id="@+id/myOrders"
        android:icon="@drawable/baseline_playlist_add_check_black_36dp"
        android:title="@string/orders"/>
    <item android:id="@+id/profile"
        android:icon="@drawable/baseline_perm_contact_calendar_black_36dp"
        android:title="@string/profile"/>
    <item android:id="@+id/wishList"
        android:icon="@drawable/heart"
        android:title="@string/wishList"/>
    <item android:id="@+id/smartSuggestions"
        android:icon="@drawable/suggestions"
        android:title="@string/smartSuggestions"/>
    <item android:id="@+id/logout"
        android:icon="@drawable/baseline_login_black_18dp"
        android:title="@string/logout"/>
    <item android:id="@+id/login"
        android:icon="@drawable/baseline_login_black_18dp"
        android:title="@string/login"/>
    <item android:id="@+id/register"
        android:icon="@drawable/baseline_edit_black_18dp"
        android:title="@string/register"/>
</menu>