<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:src="@drawable/outline_close_black_18dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_cloth"
        android:textStyle="bold"
        android:textSize="35sp"/>

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/baseline_create_new_folder_black_18dp"/>

    <EditText
        android:id="@+id/itemDescription"
        android:textSize="25sp"
        android:padding="8dp"
        android:hint="@string/item_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/choose_dates"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:drawableStart="@drawable/outline_event_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/from"/>

        <EditText
            android:id="@+id/fromDate"
            android:gravity="center"
            android:inputType="datetime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:textIsSelectable="true"
            android:calendarViewShown="false"/>

        <TextView
            android:paddingStart="10dp"
            android:drawableStart="@drawable/outline_event_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:text="@string/to"/>

        <EditText
            android:id="@+id/toDate"
            android:gravity="center"
            android:inputType="datetime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>
    </LinearLayout>

    <EditText
        android:id="@+id/cost"
        android:hint="@string/cost"
        android:drawableEnd="@drawable/outline_monetization_on_black_18dp"
        android:gravity="center_vertical"
        android:drawableTint="@color/colorCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addCloth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_cloth"/>
</LinearLayout>