<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layoutDirection="ltr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:src="@drawable/outline_close_black_18dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/place_order"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:scaleType="fitXY"
        android:src="@drawable/dress"/>

    <TextView
        android:id="@+id/itemDescription"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:textSize="18sp"
        android:text="@string/choose_dates"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:drawableStart="@drawable/outline_event_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"/>

        <EditText
            android:id="@+id/fromDate"
            android:gravity="center"
            android:inputType="datetime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:textIsSelectable="true"
            android:calendarViewShown="false"/>

        <TextView
            android:paddingStart="10dp"
            android:drawableStart="@drawable/outline_event_black_18dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"/>

        <EditText
            android:id="@+id/toDate"
            android:gravity="center"
            android:inputType="datetime"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"/>
    </LinearLayout>

    <TextView
        android:id="@+id/cost"
        android:drawableEnd="@drawable/outline_monetization_on_black_18dp"
        android:gravity="center_vertical"
        android:drawableTint="@color/colorCoin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"/>
</LinearLayout>